Write non-critical log messages only for -v=1.

BUG=606228

Review URL: https://codereview.chromium.org/1913803003

Cr-Commit-Position: refs/heads/master@{#389509}

Former-commit-id: f6ecdba8ec62b8b915fe71d84f21b4d7ee60e7a8